public/styles.css
#root {
  display: grid;
  width: 600px;
  margin: auto;
  justify-self: center;
  justify-items: center;
  text-align: center;
  grid-template-columns: 1fr;
}

.tinder {
  display: grid;
  grid-template-columns: 1fr;
  justify-items: center;
}

.tournament {
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-items: center;
}

/* .card {
  word-wrap: break-word;
  width: 300px;
  text-align: left;
  padding: 10px;
}

.card-img {
  height: 300px;
  width: 300px;
  background-size: cover;
  background-position: center;
} */

@media only screen and (max-width: 700px) {
  #root {
    width: 100%;
  }

  .card-img-top {
    height: 250px !important;
  }
}

@media only screen and (max-width: 500px) {
  .card-img-top {
    height: 200px !important;
  }
}

